# isosurface-analysis

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
configs/: ionization-distance-ALL.json  ionization-multi.json  ionization.json  single.json
isosurfaces_lib/: CMakeLists.txt
isosurfaces_lib/DAO/hdr/: DataInfo.h  MultiVarConfig.h  RepresentativesInfo.h  RunInformation.h  ScriptingInput.h  SimilarityMapInformation.h  SingleConfig.h  VariableInfo.h  VolumeInformation.h
isosurfaces_lib/DAO/src/: DataInfo.cpp  MultiVarConfig.cpp  RepresentativesInfo.cpp  RunInformation.cpp  ScriptingInput.cpp  SimilarityMapInformation.cpp  SingleConfig.cpp  VariableInfo.cpp  VolumeInformation.cpp
isosurfaces_lib/filehandler/hdr/: BinaryFloatReader.h  FileHandler.h  FileReader.h  FileWriter.h  FloatBinaryWriter.h
isosurfaces_lib/filehandler/src/: BinaryFloatReader.cpp  FileHandler.cpp  FileReader.cpp  FileWriter.cpp  FloatBinaryWriter.cpp
isosurfaces_lib/isosurfaces_cuda/: funcs.cpp  funcs.h
isosurfaces_lib/isosurfaces_cuda/hdr/: BVH.h  MarchingCube.h  common.h  funcs.h  helper_cuda.h  helper_math.h  helpers.h  thrustWrapper.h
isosurfaces_lib/isosurfaces_cuda/src/: BVH.cu  DistanceField.cu  IsosurfaceApproximation.cu  IsosurfaceExtrema.cu  JointHistogram.cu  MarchingCube.cpp  MarchingCube.cu  common.cu  defines.h  helper_math.h  tables.h  thrustWrapper.cu
isosurfaces_lib/json/hdr/: JSONHandler.h  JSONObject.h
isosurfaces_lib/json/src/: JSONHandler.cpp  JSONObject.cpp
isosurfaces_lib/runtime/: main.cpp
isosurfaces_lib/runtime/hdr/: Check.h  CheckMap.h  CreateMapOnly.h  DistanceEqualization.h  Histogram.h  MultiVar.h  PrintOnly.h  Scripting.h  Single.h  Stitch.h  SurfaceToSurface.h  globals.h
isosurfaces_lib/runtime/src/: Check.cpp  CheckMap.cpp  CreateMapOnly.cpp  DistanceEqualization.cpp  Histogram.cpp  MultiVar.cpp  PrintOnly.cpp  Scripting.cpp  Single.cpp  Stitch.cpp  SurfaceToSurface.cpp  globals.cpp
isosurfaces_lib/types/hdr/: DistanceField.h  Isosurface.h  JointHistogram.h  MarchingCubes.h  Settings.h  SimilarityMap.h  VariableNameAnalyzer.h
isosurfaces_lib/types/src/: DistanceField.cpp  Isosurface.cpp  JointHistogram.cpp  MarchingCubes.cpp  Settings.cpp  SimilarityMap.cpp  VariableNameAnalyzer.cpp
isosurfaces_lib/utils/: typeOperation.h
isosurfaces_lib/utils/hdr/: FileUtils.h  MemUtils.h  Report.h  RuntimeInfoUtils.h  StringUtils.h  VectorUtils.h  disablePrint.h  floatNExtensions.h
isosurfaces_lib/utils/src/: FileUtils.cpp  MemUtils.cpp  Report.cpp  RuntimeInfoUtils.cpp  StringUtils.cpp  VectorUtils.cpp  floatNExtensions.cpp
isosurfaces_lib/visualization/hdr/: HistogramVisualizer.h  SimilarityMapVisualizer.h
isosurfaces_lib/visualization/src/: HistogramVisualizer.cpp  SimilarityMapVisualizer.cpp
